<resources>
    <string name="app_name">Syrixa Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="please_register_to_login">Please register to login</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello!</string>
    <string name="task_groups">Task Groups</string>
    <string name="field_cant_be_empty_error">This field cant be empty</string>
    <string name="email_must_valid">Email must be valid</string>
    <string name="password_not_match">Password did not match</string>
    <string name="loading">Loading...</string>
    <string name="success_register">Registration Success</string>
    <string name="failed_register">Register Failed</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="add_project">Add Project</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="person">Person</string>
    <string name="date">Date</string>
    <string name="file">File</string>
    <string name="create_task">Create Task</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="kick">Kick</string>
    <string name="set_leader">Set leader</string>
    <string name="task_list">Project List</string>
    <string name="assigned">Assigned</string>
    <string name="due_date">Due Date</string>
    <string name="description">Description</string>
    <string name="submission_status">Submission Status</string>
    <string name="submit">Submit</string>
    <string name="file_submission">File Submission</string>
    <string name="submission_date">Submission Date</string>
    <string name="submitted_file">Submitted File</string>
    <string name="text">Text</string>

</resources>