<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/registerIv"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/reigsterimg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/registerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratreg"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/registerIv"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/registerDescTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratreg"
                app:layout_constraintTop_toBottomOf="@id/registerTV"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/please_register_to_login"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:hintEnabled="true"
                app:helperTextEnabled="false"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/registerDescTV"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:drawableStart="@drawable/ic_outline_person"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:hintEnabled="true"
                app:helperTextEnabled="false"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/usernameET"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:drawableStart="@drawable/ic_outline_email"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:helperTextEnabled="false"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/emailET"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:drawableStart="@drawable/ic_outline_lock"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                app:hintEnabled="true"
                app:helperTextEnabled="false"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/passwordET"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:drawableStart="@drawable/ic_outline_lock"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"
                android:text="@string/register"
                android:backgroundTint="@color/customPurple"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerBtn"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                >
                <TextView
                    android:id="@+id/alreadyTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserratreg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/already_have_account"
                    />

                <TextView
                    android:id="@+id/toLoginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserratreg"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/alreadyTV"
                    android:layout_marginStart="8dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>