<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.project.AddProjectFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="95dp"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_back_button"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/createGroupTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/add_project"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backBtn"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/projectNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"
                app:hintEnabled="true"
                app:helperTextEnabled="false"
                android:textColorHint="#50000000"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/createGroupTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_goneMarginTop="24dp"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectNameText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:background="@drawable/bg_create_group"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskDescET"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="24dp"
                android:hint="@string/task_description"
                android:textColorHint="#50000000"
                app:counterEnabled="false"
                app:helperTextEnabled="false"
                app:hintEnabled="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/projectNameET">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskDescText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_create_group"
                    android:drawablePadding="16dp"
                    android:gravity="top|start"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:lines="7"
                    android:maxLines="15"
                    android:scrollbars="vertical"
                    android:padding="8dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/projectPersonET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person"
                app:hintEnabled="true"
                app:helperTextEnabled="false"
                android:textColorHint="#50000000"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taskDescET"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectPersonText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:drawablePadding="16dp"
                    android:padding="8dp"
                    android:background="@drawable/bg_create_group"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/projectDateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:hintEnabled="true"
                app:helperTextEnabled="false"
                android:textColorHint="#50000000"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/projectPersonET"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectDateText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:drawablePadding="16dp"
                    android:background="@drawable/bg_create_group"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="@id/projectDateET"
                app:layout_constraintTop_toTopOf="@id/projectDateET"
                app:layout_constraintEnd_toEndOf="@+id/projectDateET" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/projectFileET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/file"
                app:hintEnabled="true"
                app:helperTextEnabled="false"
                android:textColorHint="#50000000"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/projectDateET"
                app:counterEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/projectFileText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:drawablePadding="16dp"
                    android:background="@drawable/bg_create_group"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/createBtn"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/purple_container_15"
                android:backgroundTint="@color/customPurple"
                android:text="@string/create_task"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/projectFileET" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>